Add openapi generated code from spec 2.10.0
