# openapi_server/models/assessment_output.py
@@ -10,6 +10,7 @@ from typing import List, Dict, Type
 
 from openapi_server.models.base_model_ import Model
 from openapi_server.models.assessment_output_badge import AssessmentOutputBadge
+from openapi_server.models.assessment_output_meta import AssessmentOutputMeta
 from openapi_server.models.assessment_output_report_value import AssessmentOutputReportValue
 from openapi_server.models.assessment_output_repository import AssessmentOutputRepository
 from openapi_server import util
@@ -21,29 +22,29 @@ class AssessmentOutput(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, version: str=None, repository: List[AssessmentOutputRepository]=None, report: Dict[str, AssessmentOutputReportValue]=None, badge: AssessmentOutputBadge=None):
+    def __init__(self, meta: AssessmentOutputMeta=None, repository: List[AssessmentOutputRepository]=None, report: Dict[str, AssessmentOutputReportValue]=None, badge: AssessmentOutputBadge=None):
         """AssessmentOutput - a model defined in OpenAPI
 
-        :param version: The version of this AssessmentOutput.
+        :param meta: The meta of this AssessmentOutput.
         :param repository: The repository of this AssessmentOutput.
         :param report: The report of this AssessmentOutput.
         :param badge: The badge of this AssessmentOutput.
         """
         self.openapi_types = {
-            'version': str,
+            'meta': AssessmentOutputMeta,
             'repository': List[AssessmentOutputRepository],
             'report': Dict[str, AssessmentOutputReportValue],
             'badge': AssessmentOutputBadge
         }
 
         self.attribute_map = {
-            'version': 'version',
+            'meta': 'meta',
             'repository': 'repository',
             'report': 'report',
             'badge': 'badge'
         }
 
-        self._version = version
+        self._meta = meta
         self._repository = repository
         self._report = report
         self._badge = badge
@@ -58,27 +59,25 @@ class AssessmentOutput(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def version(self):
-        """Gets the version of this AssessmentOutput.
+    def meta(self):
+        """Gets the meta of this AssessmentOutput.
 
-        Version of the API spec the generated report payload is based on
 
-        :return: The version of this AssessmentOutput.
-        :rtype: str
+        :return: The meta of this AssessmentOutput.
+        :rtype: AssessmentOutputMeta
         """
-        return self._version
+        return self._meta
 
-    @version.setter
-    def version(self, version):
-        """Sets the version of this AssessmentOutput.
+    @meta.setter
+    def meta(self, meta):
+        """Sets the meta of this AssessmentOutput.
 
-        Version of the API spec the generated report payload is based on
 
-        :param version: The version of this AssessmentOutput.
-        :type version: str
+        :param meta: The meta of this AssessmentOutput.
+        :type meta: AssessmentOutputMeta
         """
 
-        self._version = version
+        self._meta = meta
 
     @property
     def repository(self):
